--- a/src/pages/Question/Edit/EditHeader.module.scss
+++ b/src/pages/Question/Edit/EditHeader.module.scss
@@ -1,7 +1,7 @@
 .headerWrapper{
   background-color: #fff;
   border-bottom: 1px solid #e8e8e8;
-  padding: 12px 0px;
+  padding: 12px 0;
 }
 
 .header{
