--- a/src/pages/Question/Edit/Edit.module.scss
+++ b/src/pages/Question/Edit/Edit.module.scss
@@ -1,7 +1,7 @@
 .container{
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  height: 100%;
   background-color: #f0f2f5;
 
 }
@@ -13,9 +13,9 @@
 .content{
   display: flex;
   margin: 0 24px;
-  height: 100%;
+  //height: 100%;
   .left{
-    width: 285px;
+    width: 295px;
     padding: 0 12px;
     background-color: #fff;
   }
